Closed Bug 805014 Opened 13 years ago Closed 13 years ago

Progressive tile painting causes reftests to fail

Categories

(Core :: Graphics: Layers, defect)

ARM
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: cwiiis, Assigned: cwiiis)

References

Details

Attachments

(2 files)

Enabling progressive rendering causes permanent orange on some tests in R1 and R4.
Got r=bgirard on IRC, assuming this fixes the problem. When a shadow target is set, the layer manager waits until transactions aren't repeated, but it doesn't expect paints to be cancelled. As other problems are also likely to crop up from the testing framework not really expecting asynchronous drawing, disable progressive tile rendering with a shadow target set, for now.
Attachment #674659 - Flags: review+
hmm, not green - R4 still fails. It just looks like it needs fuzzing, the output is near identical, but it looks like an offset may have changed slightly. Given that progressive rendering isn't used drawing reftests, I'm not sure what path has changed that there'd be a difference at all... I'll go over this code after fixing bug 805028.
Pushed to inbound: https://hg.mozilla.org/integration/mozilla-inbound/rev/6376bf9b9cc6 Consensus is to fuzz R4 - will do a little bit more experimentation, but will go ahead and do that if it leads to nothing.
Whiteboard: [leave-open]
Add the necessary amount of fuzzing to make this test pass. Given the problems these tests have had in the past (bug 653481 and bug 696674), none of which actually appear to have been actively fixed, I'm not inclined to investigate this too much further.
Attachment #675185 - Flags: review?(jwatt)
Attachment #675185 - Flags: review?(jwatt) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: [leave-open]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: