Bug 805014 - Disable progressive tiles when a shadow target is set. r=bgirard

The testing framework doesn't react well to paints not coming in synchronously.
Disable progressive tile painting when a shadow target is set on the layer
manager for now.